--- a/pom.xml
+++ b/pom.xml
@@ -128,7 +128,7 @@
 					<version>2.22.1</version>
 					<configuration>
 						<includes>
-							<include>**/*Runner.java</include>
+							<include>**/*TestRunner.java</include>
 						</includes>
 					</configuration>
 				</plugin>
